re PR tree-optimization/65538 (Memory leak of ipa_node_params_sum elements)

Fix PR65538.

	PR tree-optimization/65538
	* symbol-summary.h (function_summary::~function_summary):
	Relese memory for allocated summaries.
	(function_summary::release): New function.

From-SVN: r221658